[package]
name = "password-rules-checker"
version = "0.1.0"
authors = ["Cldfire"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
password-rules-parser = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
structopt = "0.3"
anyhow = "1.0"
